# BayExploration

./: README.md  main.py  pyproject.toml  run.py
config/: example_config.yaml
core/: schema.py
core/benchmark_function/: base_function.py  bowl_shaped.py  many_local_minima.py  steep_ridges.py  valley_shaped.py
core/experiment/: experiment.py
core/optimizer/acquisition_function/: base_acquisition_function.py  qKG.py  qKG_acquistionfuction.py  qLBMVE.py  qLogNoisyEI.py  qMVE.py  qPES.py  qSimpleRegret.py  qUCB.py  thompson_sampling.py
core/optimizer/gaussian_model/: base_guassian.py  single_guassian.py
core/optimizer/gaussian_model/covariance_function/: covariance.py
runs/: main.py
src/: schema.py
src/analyzer/: analyzer.py
src/benchmark_function/: __init__.py  base_function.py  bowl_shaped.py  many_local_minima.py  steep_ridges.py  valley_shaped.py
src/experiment/: experiment.py
src/optimizer/: optimizers.py
src/optimizer/acquisition_function/: TS.py  base_acquisition_function.py  qKG.py  qLBMVE.py  qLogNoisyEI.py  qMVE.py  qPES.py  qSimpleRegret.py  qUCB.py
src/optimizer/gaussian_model/: base_guassian.py  single_guassian.py
src/optimizer/gaussian_model/mean_fuctions/: means.py
src/registry/: __init__.py  acquisition_function_registry.py  benchmark_function_registry.py  covariance_function_registry.py  gaussian_model_registry.py  mean_function_registry.py
src/schema/: experiment.py  records.py
