[project]
name = "bayexploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=25.12.0",
    "botorch>=0.16.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]

